--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,31 @@
+:root {
+	--heading-font-family: Times, 'Times New Roman', serif
+}
+
 body {
 	margin: 0;
 }
 
 body * {
 	box-sizing: border-box;
+	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 500;
+	font-family: var(--heading-font-family);
+	margin: 0;
+	& * {
+		font-family: var(--heading-font-family);
+	}
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+p {
+	margin: 0;
 }
